tests/fixtures/errors/bad_param_casing.ksr
// Bad param casing: param must be lower_snake_case
param BadName = 1.0;
